tests/negative/prefixed_assign.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import http as prefix

class A:
  foo:
    return "foo"

final_global ::= 42

some_method:
  return 499

x := 0
